--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 
     // insert Library Volley for Post and Get method Database
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.chromium.net:cronet-embedded:98.4758.101'
 
     def cameraxVersion = "1.1.0-alpha05"
     implementation "androidx.camera:camera-core:${cameraxVersion}"
