--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -1,15 +1,16 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.example.saveimageinstorage'
-    compileSdk 32
+    namespace 'com.example.tensorflowliteapp'
+    compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.saveimageinstorage"
-        minSdk 26
-        targetSdk 32
+        applicationId "com.example.tensorflowliteapp"
+        minSdk 24
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -26,29 +27,21 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    buildFeatures {
+        mlModelBinding true
+    }
 }
-
 dependencies {
-
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-
-    // insert Library Volley for Post and Get method Database
-    implementation 'com.android.volley:volley:1.2.1'
-    implementation 'org.chromium.net:cronet-embedded:98.4758.101'
-
-    def cameraxVersion = "1.1.0-alpha05"
-    implementation "androidx.camera:camera-core:${cameraxVersion}"
-    implementation "androidx.camera:camera-camera2:${cameraxVersion}"
-    implementation "androidx.camera:camera-lifecycle:${cameraxVersion}"
-
-    // CameraX View class
-    implementation 'androidx.camera:camera-view:1.0.0-alpha25'
-
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
